--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-cloud-volume==0.31.2
 plyfile
 h5py
 numpy
@@ -6,3 +5,6 @@ scipy
 sklearn
 networkx
 multiwrapper
+trimesh
+cloud-volume==0.31.2
+pyassimp
