--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,5 @@ script:
   - python setup.py test # or py.test for Python versions 3.5 and below
 cache:   
   pip: true
+after-success:
+  - codecov -t 72712def-b073-4211-88e4-f7b4d5b0d1ba
