--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ install:
   - pip install -r test_requirements.txt
 script:
   - python setup.py test # or py.test for Python versions 3.5 and below
-after-success:
+after_success:
   - codecov -t 72712def-b073-4211-88e4-f7b4d5b0d1ba
 cache:
   pip: true
