adding requirements.txt updates

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,17 @@
 plyfile
 h5py
 numpy
-scipy
 sklearn
 networkx
 multiwrapper
-trimesh
 cloud-volume
 pyassimp
 pymeshfix
+vtk
+pcst_fast
+scipy==1.2.0
+trimesh==2.35.48
+pytest==4.0.2
+python_jsonschema_objects==0.3.3
 vtk
 pcst_fast
