--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 python:
   - "3.6"
   - "3.6-dev" # 3.6 development branch
-
+  - "3.7-dev"
 # command to install dependencies
 addons:
   apt:
