Update pymeshfix version
for PEP8 vs PascalCase functions

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,6 @@ multiwrapper
 trimesh
 -e git+https://github.com/seung-lab/cloud-volume.git@graphene#egg=cloud-volume
 pyassimp
-pymeshfix
+pymeshfix>=0.12.3
 vtk
 pcst_fast
