adding more tests to meshparty (#17)
* adding pytest to setup.py

* adding vscode to gitignore

* adding a travis.yml

* adding travis file

* basic tests functioning

* adding to gitignore

* adding libassimp-dev

* removing only 3.6 testing

* add code cov token

* pre install numpy

* trying with no pip cache

* trying to upgrade numpy

* trying to install pymeshfix from scratch

* removing install from source

* adding some read write tests

* adding pip cache back

* fix typo in travis yaml

* flake8

* removed overlap components

* add more tests

* empty trimesh_vtk_test file

* added a full cell to repo and a fixture

* ignoring DS_Store

* changing to forrest's scipy

* adding 3.7 dev

* removing my scipy

* adding full cell id to test

* add assertion

* test trimesh: add example coveragerc, conftest, trimesh tests (#12)

* fix_mesh tests and fix broken pymeshfix interface (#13)

* test_io: add simplified test for fix_mesh and relevant fixtures

* trimesh_io: fix AttributeError using python functions (pymeshfix moved away from PascalCase)

* Update pymeshfix version

for PEP8 vs PascalCase functions

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ multiwrapper
 trimesh
 -e git+https://github.com/seung-lab/cloud-volume.git@graphene#egg=cloud-volume
 pyassimp
-pymeshfix
+pymeshfix>=0.12.3
 pykdtree
 vtk
 pcst_fast
