added conda to travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,16 @@ addons:
         - gfortran
         - libassimp-dev
 install:
+  - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
+  - bash miniconda.sh -b -p $HOME/miniconda
+  - export PATH="$HOME/miniconda/bin:$PATH"
+  - hash -r
+  - conda config --set always_yes yes --set changeps1 no
+  - conda update -q conda
+  - conda info -a
+  - conda create -q -n test-env python=$TRAVIS_PYTHON_VERSION
+  - source activate test-env
+  - conda install -c conda-forge pyembree
   - pip install codecov numpy cython --upgrade
   - pip install -r requirements.txt
   - pip install -r test_requirements.txt
