--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ addons:
         - libopenblas-dev
         - gfortran
         - libassimp-dev
+        - xvfb
 install:
   - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
   - bash miniconda.sh -b -p $HOME/miniconda
@@ -28,6 +29,9 @@ install:
   - pip install codecov numpy cython --upgrade
   - pip install -r requirements.txt
   - pip install -r test_requirements.txt
+before_script:
+  - export DISPLAY=:99.0; sh -e /etc/init.d/xvfb start
+  - sleep 3
 script:
   - python setup.py test -a test # or py.test for Python versions 3.5 and below
 after_success:
