--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ scipy>=1.3.0
 sklearn
 networkx
 multiwrapper
-trimesh
+trimesh>=2.38.42
 -e git+https://github.com/seung-lab/cloud-volume.git@graphene#egg=cloud-volume
 pymeshfix>=0.12.3
 pykdtree
