--- a/.travis.yml
+++ b/.travis.yml
@@ -28,8 +28,8 @@ install:
   - conda info -a
   - conda create -q -n test-env python=$(echo $TRAVIS_PYTHON_VERSION|sed 's/-dev//')
   - source activate test-env
-  - conda install -c conda-forge pyembree vtk
-  - pip install codecov numpy cython --upgrade
+  - conda install -c conda-forge pyembree vtk cython numpy
+  - pip install codecov --upgrade
   - pip install -r requirements.txt
   - pip install -r test_requirements.txt
   - pip install -r optional_requirements.txt
