--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -21,5 +21,7 @@ python:
   version: 3.7
   install:
     - requirements: docs/requirements.txt
+    - method: pip
+        path: .
 conda:
   environment: environment.yml
