--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -22,6 +22,6 @@ python:
   install:
     - requirements: docs/requirements.txt
     - method: setuptools
-        path: "."
+      path: .
 conda:
   environment: environment.yml
