swap trimesh[easy] for specific needed package

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,8 @@ scikit-learn
 networkx
 multiwrapper
 cloud-volume>=1.16.0
-trimesh[easy]>=3.0.14
+trimesh>=3.0.14
+rtree
 pymeshfix>=0.12.3
 vtk
 shapely
