--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -23,9 +23,23 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python-version }}
+      - name: Install Linux GL Dependencies
+        if: runner.os == 'Linux'
+        shell: bash
+        run: sudo apt-get update && sudo apt-get install libgl1-mesa-glx xvfb -y
+      - name: Configure headless display on Linux
+        if: runner.os == 'Linux'
+        shell: bash
+        run: |
+          export DISPLAY=:99.0
+          echo "DISPLAY=:99.0" >> $GITHUB_ENV
+          Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
+      - name: Give xvfb some time to start on Linux
+        if: runner.os == 'Linux'
+        shell: bash
+        run: sleep 3
       - name: Install dependencies
         run: |
-          apt-get update && apt-get install -y build-essential libgl1-mesa-dev
           python -m pip install --upgrade pip
           python -m pip install flake8 pytest
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
