--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ authors = [
     {name = "Casey Schneider-Mizell", email = "caseys@alleninstitute.org"},
 ]
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.11"
 license = {text = "MIT"}
 dynamic = ["version"]
 classifiers = [
@@ -20,39 +20,42 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-    "plyfile",
     "h5py",
     "numpy",
     "scipy>=1.3.0",
-    "scikit-learn",
-    "networkx<3",
+    "networkx",
     "multiwrapper",
     "cloud-volume>=1.16.0",
-    "trimesh>=4.0.0",
-    "rtree",
-    "pymeshfix>=0.12.3",
-    "vtk",
-    "shapely",
-    "imageio",
+    "trimesh[easy]>=4.0.0",
     "pandas",
     "orjson",
-    "blosc",
     "tables",
-    "dataclasses",
+    "blosc",
+    "blosc2>=3"
 ]
 
-[project.optional-dependencies]
-SDF = ["pyembree"]
-REPAIR = ["caveclient>=4.0.0"]
-test = [
+[dependency-groups]
+dev = [
+    "scikit-learn",
+    "imageio",
+    "ipykernel",
     "pytest",
     "pytest-cov",
     "pytest-mock"
 ]
-dev = [
+
+[project.optional-dependencies]
+SDF = []
+REPAIR = ["caveclient>=4.0.0"]
+test = [
+    "scikit-learn",
+    "imageio",
     "pytest",
     "pytest-cov",
-    "pytest-mock",
+    "pytest-mock"
+]
+viz = [
+    "vtk",
 ]
 
 [project.urls]
@@ -69,8 +72,3 @@ write_to = "meshparty/_version.py"
 [tool.pytest.ini_options]
 testpaths = ["test"]
 required_plugins = ["pytest-mock"]
-
-[dependency-groups]
-dev = [
-    "pytest-mock>=3.14.0",
-]
