--- a/.github/workflows/python-package-uv.yml
+++ b/.github/workflows/python-package-uv.yml
@@ -26,6 +26,5 @@ jobs:
       - name: Install project and dependencies
         run: uv sync --python ${{ matrix.python-version }}
       - name: Run tests
-        run: uv run pytest test
-      - name: Lint with ruff
-        run: uv run ruff check src/*
+        run: uv run --frozen pytest test
+        
