--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ authors = [
     {name = "Casey Schneider-Mizell", email = "caseys@alleninstitute.org"},
 ]
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 license = {text = "MIT"}
 dynamic = ["version"]
 classifiers = [
@@ -21,16 +21,16 @@ classifiers = [
 ]
 dependencies = [
     "h5py",
-    "numpy",
     "scipy>=1.3.0",
     "networkx",
     "multiwrapper",
     "cloud-volume>=1.16.0",
-    "trimesh[easy]>=4.0.0",
+    "trimesh",
     "pandas",
     "orjson",
     "tables",
     "blosc",
+    "numpy>=2.0.2",
 ]
 
 [dependency-groups]
