--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,44 +20,44 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-    "plyfile",
     "h5py",
-    "numpy",
+    "numpy>=2.0.0",
     "scipy>=1.3.0",
     "scikit-learn",
-    "networkx<3",
     "multiwrapper",
     "cloud-volume>=1.16.0",
-    "trimesh>=4.0.0",
-    "rtree",
     "pymeshfix>=0.12.3",
-    "vtk",
-    "shapely",
-    "imageio",
-    "pandas",
-    "orjson",
-    "blosc",
-    "tables",
-    "dataclasses",
+    "tables>=3.0.0",
+    "blosc>=1.11.2",
+    "orjson>=3.0.0",
+    "pandas>=2.0.0",
+    "trimesh[easy]>=4.0.0",
+    "networkx",
 ]
 
+[dependency-groups]
+dev = [
+    "pytest-mock",
+    "ipykernel",
+    "imageio",
+    "vtk",
+]
+
+
 [project.optional-dependencies]
-SDF = ["pyembree"]
 REPAIR = ["caveclient>=4.0.0"]
 test = [
     "pytest",
     "pytest-cov",
     "pytest-mock"
 ]
-dev = [
-    "pytest",
-    "pytest-cov",
-    "pytest-mock",
+viz = [
+    "vtk"
 ]
 
 [project.urls]
-"Homepage" = "https://github.com/sdorkenw/MeshParty"
-"Bug Tracker" = "https://github.com/sdorkenw/MeshParty/issues"
+"Homepage" = "https://github.com/CAVEconnectome/MeshParty"
+"Bug Tracker" = "https://github.com/CAVEconnectome/MeshParty/issues"
 
 [tool.setuptools]
 packages = ["meshparty"]
@@ -70,7 +70,3 @@ write_to = "meshparty/_version.py"
 testpaths = ["test"]
 required_plugins = ["pytest-mock"]
 
-[dependency-groups]
-dev = [
-    "pytest-mock>=3.14.0",
-]
