--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,22 @@
 [build-system]
-requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=6.0"]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling>=1.27.0"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["meshparty"]
 
 [project]
 name = "meshparty"
+version = "2.0.0"
 description = "a service to work with meshes"
 authors = [
     {name = "Sven Dorkenwald", email = "svenmd@princeton.edu"},
     {name = "Forrest Collman", email = "forrestc@alleninstitute.org"},
     {name = "Casey Schneider-Mizell", email = "caseys@alleninstitute.org"},
 ]
-readme = "README.md"
+readme = "README.rst"
 requires-python = ">=3.10"
 license = {text = "MIT"}
-dynamic = ["version"]
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
@@ -26,7 +29,6 @@ dependencies = [
     "scikit-learn",
     "multiwrapper",
     "cloud-volume>=1.16.0",
-    "pymeshfix>=0.12.3",
     "tables>=3.0.0",
     "blosc>=1.11.2",
     "orjson>=3.0.0",
@@ -70,3 +72,27 @@ write_to = "meshparty/_version.py"
 testpaths = ["test"]
 required_plugins = ["pytest-mock"]
 
+[tool.bumpversion]
+current_version = "2.0.0"
+parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
+serialize = ["{major}.{minor}.{patch}"]
+regex = false
+ignore_missing_version = false
+tag = true
+sign_tags = false
+tag_name = "v{new_version}"
+tag_message = "Bump version: {current_version} → {new_version}"
+allow_dirty = false
+commit = true
+message = "v{new_version}"
+commit_args = ""
+
+[[tool.bumpversion.files]]
+filename = "pyproject.toml"
+search = "version = \"{current_version}\""
+replace = "version = \"{new_version}\""
+
+[[tool.bumpversion.files]]
+filename = "meshparty/__init__.py"
+search = "__version__ = \"{current_version}\""
+replace = "__version__ = \"{new_version}\""
