--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,8 @@ dependencies = [
     "numpy>=2.0.2",
     "scipy>=1.13.1",
     "trimesh[easy]>=4.6.2",
-    "morphsync @ /Users/caseysm/Work/Code/morphsync"
+    "morphsync",
+    "orjson>=3.10.15",
 ]
 authors = [
     { name = "Casey Schneider-Mizell", email = "caseysm@gmail.com" },
@@ -32,6 +33,9 @@ dev = [
     "pytest-cov",
     "ipykernel",
     "bump-my-version",
+    "pcg_skel",
+    "octarine3d[all]",
+    "cloud-volume"
  ]
 docs = [
     "mkdocs",
@@ -49,8 +53,11 @@ profile = [
 [tool.uv]
 default-groups = ["dev", "docs", "lint", "profile"]
 
+[tool.uv.sources]
+morphsync = { path = "../morphsync", editable = true }
+
 [tool.bumpversion]
-current_version = "2.0.0"
+current_version = "3.0.0"
 parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
 serialize = ["{major}.{minor}.{patch}"]
 search = "{current_version}"
